chat room displays

--- a/public/chat-room.html
+++ b/public/chat-room.html
@@ -12,7 +12,7 @@
 
   <script>
 const socket = io('http://localhost:3001')
-{{!-- const socket = io(); --}}
+// const socket = io();
 const messageContainer = document.getElementById('message-container')
 const messageForm = document.getElementById('send-container')
 const messageInput = document.getElementById('message-input')
